[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fab-api-client"
version = "2.0.0"
description = "Python client for Fab.com marketplace API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Brent Lopez", email = "brent@brentlopez.dev"},
]
keywords = ["fab", "marketplace", "api", "client", "assets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "asset-marketplace-client-core @ file:///Users/brentlopez/Projects/asset-marketplace-client-core",
    "requests>=2.28.0",
]

[project.optional-dependencies]
validation = ["jsonschema>=4.0.0"]
cli = ["tqdm>=4.66.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pip-audit>=2.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/brentlopez/fab-api-client"
Repository = "https://github.com/brentlopez/fab-api-client"
"Bug Tracker" = "https://github.com/brentlopez/fab-api-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fab_api_client"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=fab_api_client --cov-report=term-missing --cov-report=html"

[dependency-groups]
dev = [
    "types-jsonschema>=4.25.1.20251009",
]
